# dlfcn-win32

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  COPYING  Makefile  Makefile.am  README.md  acinclude.m4  configure  configure.ac  configure2  dlfcn-win32-config.cmake.in  dlfcn.c  dlfcn.h  test.c  testdll.c  testdll2.c  testdll3.c
.github/: CODEOWNERS
cmake-test/: CMakeLists.txt
cmake/modules/: Macros.cmake
src/: CMakeLists.txt  dlfcn.c  dlfcn.h
tests/: CMakeLists.txt  test-dladdr.c  test.c  testdll.c  testdll2.c
tools/: ci-build.sh
trunk/: Makefile  configure  dlfcn.c  dlfcn.h  test.c  testdll.c
visual-studio/12/: dlfcn-win32.sln
visual-studio/12-static/dl/: dl.vcxproj  dl.vcxproj.filters
visual-studio/12-static/test/: test.vcxproj
visual-studio/12-static/testdll/: testdll.vcxproj
visual-studio/12/dl/: dl.vcxproj
visual-studio/12/test/: test.vcxproj  test.vcxproj.filters
visual-studio/12/testdll/: testdll.vcxproj  testdll.vcxproj.filters
wiki/: DlfcnWin32.wiki
